# trips

./: .gitignore  Dockerfile  pyproject.toml  questions.md
.github/workflows/: build-deploy.yml
src/poi_ai/: __init__.py  ai_demo.py  app.py  chat_bot.py  locations.ipynb  poi.py  sort_demo.py
src/poi_ai/templates/: index.html
src/trips/: locations.ipynb  poi.ipynb  poi.py
src/trips/.ipynb_checkpoints/: locations-checkpoint.ipynb
tests/: trips.feature  trips_a51.py
tests/.ipynb_checkpoints/: trips-checkpoint.feature
