[project]
name = "trips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "andy@proquickly.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pytest-bdd>=8.1.0",
]

[project.scripts]
trips = "trips:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.1.1",
]
